apps/goatlint/src/snapshots/fixtures__cli__valid_complex_config_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/valid_complex_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files with 25 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
